--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 					  <ul class="right">
 						<li><a href="index.html">首頁</a></li>
 						<li><a href="about.html">關於我們</a></li>
-						<li><a href="blog.html">新聞</a></li>
+						<li><a href="blog.html">文章</a></li>
 						<li><a href="contact.html">聯絡我們</a></li>
 					  </ul>
 					  <!-- End Left Nav Section -->
