--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width" />
-	<title>臺南市政府財政稅務局</title>
+	<title>臺南市政府財政稅務局首頁</title>
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans:400italic,400,700' rel='stylesheet' type='text/css'>
 	<!-- Smallipop CSS - Tooltips -->
 	<link rel="stylesheet" href="plugins/smallipop/css/contrib/animate.min.css" type="text/css" media="all" title="Screen" />
@@ -55,9 +55,9 @@
 					<!-- Left Nav Section -->
 					  <ul class="right">
 						<li><a href="index.html">首頁</a></li>
-						<li><a href="about.html">關於我們</a></li>
-						<li><a href="blog.html">最新消息</a></li>
-						<li><a href="contact.html">聯絡我們</a></li>
+						<li><a href="about.html">我們</a></li>
+						<li><a href="blog.html">消息</a></li>
+						<li><a href="contact.html">我們</a></li>
 					  </ul>
 					  <!-- End Left Nav Section -->
 				</section>
