--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
 					<!-- Left Nav Section -->
 					  <ul class="right">
 						<li><a href="index.html">首頁</a></li>
-						<li><a href="about.html">我們</a></li>
-						<li><a href="blog.html">消息</a></li>
-						<li><a href="contact.html">我們</a></li>
+						<li><a href="about.html">關於我們</a></li>
+						<li><a href="blog.html">文章</a></li>
+						<li><a href="contact.html">聯絡我們</a></li>
 					  </ul>
 					  <!-- End Left Nav Section -->
 				</section>
